fix(components): remove scroll overflow-y

--- a/src/app/pages/admin/product-list/product-list.component.scss
+++ b/src/app/pages/admin/product-list/product-list.component.scss
@@ -20,7 +20,7 @@
   height: 100%;
 
   margin: 5px;
-  overflow: hidden;
+
 }
 
 .list {
